--- a/.github/workflows/version-label.yml
+++ b/.github/workflows/version-label.yml
@@ -1,8 +1,8 @@
 name: Update Base Branch
 
 on:
-  pull_request_target:
-    types: [ labeled ]
+  pull_request:
+    types: [ opened ]
 
 jobs:
   update:
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: FabricMC/fabric-action-scripts@v2
         with:
-          context: yarn-update-base
+          context: yarn-version-label
