--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
         java: [17-jdk, 18-jdk]
     runs-on: ubuntu-22.04
     container:
-      image: openjdk:${{ matrix.java }}
+      image: eclipse-temurin:${{ matrix.java }}
       options: --user root
     steps:
       - uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
   test-build-logic:
     runs-on: ubuntu-22.04
     container:
-      image: openjdk:18-jdk
+      image: eclipse-temurin:18-jdk
       options: --user root
     steps:
       - uses: actions/checkout@v3
