--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ jobs:
     if: ${{ github.repository_owner == 'FabricMC' }}
     runs-on: ubuntu-22.04
     container:
-      image: openjdk:18-jdk
+      image: eclipse-temurin:18-jdk
       options: --user root
     steps:
       - uses: actions/checkout@v3
