--- a/.github/workflows/release-filament.yml
+++ b/.github/workflows/release-filament.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     container:
-      image: openjdk:18-jdk
+      image: eclipse-temurin:18-jdk
       options: --user root
     steps:
       - uses: actions/checkout@v3
