Move more to filament

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@ buildscript {
 
 plugins {
 	id 'java' // for constants, packages, javadoc
-	id 'de.undercouch.download' version '4.1.2'
 	id 'maven-publish'
 	id "com.diffplug.spotless" version "6.4.2"
 	id 'net.fabricmc.filament'
@@ -95,91 +94,62 @@ dependencies {
 	asm "org.ow2.asm:asm-util:${project.asm_version}"
 }
 
-def setupGroup = "jar setup"
 def yarnGroup = "yarn"
 def buildMappingGroup = "mapping build"
 def mapJarGroup = "jar mapping"
 def mappingsDir = file("mappings")
 def cacheFilesMinecraft = file(".gradle/minecraft")
 def tempDir = file(".gradle/temp")
-def intermediaryJar = file("${minecraft_version}-intermediary.jar")
-def unpickedJar = file("${minecraft_version}-intermediary-unpicked.jar")
-def namedJar = file("${minecraft_version}-named.jar")
-def serverIntermediaryJar = file("${minecraft_version}-server-intermediary.jar")
 def libs = new File("build/libs/")
 
 def minecraftLibraries = tasks.minecraftLibraries.files
 
-import com.google.common.hash.Hashing
 import cuchaz.enigma.command.CheckMappingsCommand
-import cuchaz.enigma.command.ComposeMappingsCommand
-import cuchaz.enigma.command.ConvertMappingsCommand
-import cuchaz.enigma.command.MapSpecializedMethodsCommand
 import net.fabricmc.filament.task.MapJarTask
+import net.fabricmc.filament.task.DownloadTask
+import net.fabricmc.filament.task.ExtractZipEntryTask
+import net.fabricmc.filament.task.UnpickJarTask
+import net.fabricmc.filament.task.base.WithFileInput
+import net.fabricmc.filament.task.base.WithFileOutput
+import net.fabricmc.filament.task.enimga.ConvertMappingsTask
+import net.fabricmc.filament.task.enimga.MapSpecializedMethodsTask
 import net.fabricmc.stitch.commands.CommandMergeTiny
 import net.fabricmc.stitch.commands.CommandReorderTiny
-import net.fabricmc.stitch.commands.CommandRewriteIntermediary
 import net.fabricmc.stitch.commands.tinyv2.CommandMergeTinyV2
 import net.fabricmc.stitch.commands.tinyv2.CommandReorderTinyV2
 import net.fabricmc.nameproposal.MappingNameCompleter
 
 import java.util.zip.GZIPOutputStream
 
-boolean validateChecksum(File file, String checksum) {
-	if (file != null) {
-		def hash = com.google.common.io.Files.asByteSource(file).hash(Hashing.sha1())
-		def builder = new StringBuilder()
-		hash.asBytes().each {
-			builder.append(Integer.toString((it & 0xFF) + 0x100, 16).substring(1))
-		}
-		return builder.toString().equals(checksum)
-	}
-	return false
+task downloadIntermediary(type: DownloadTask) {
+	group = buildMappingGroup
+	url = "https://github.com/FabricMC/intermediary/raw/master/mappings/${minecraft_version}.tiny"
+	output = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary.tiny")
 }
 
-task downloadIntermediary(type: Download) {
+task downloadIntermediaryV2(type: DownloadTask) {
 	group = buildMappingGroup
-	def url = "https://github.com/FabricMC/intermediary/raw/master/mappings/${minecraft_version}.tiny"
-	src com.google.common.net.UrlEscapers.urlFragmentEscaper().escape(url)
-	dest new File(cacheFilesMinecraft, "${minecraft_version}-intermediary.tiny")
+	url = "https://maven.fabricmc.net/net/fabricmc/intermediary/${minecraft_version}/intermediary-${minecraft_version}-v2.jar"
+	output = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-v2.jar")
 }
 
-task downloadIntermediaryV2(type: Download) {
-	group = buildMappingGroup
-	def url = "https://maven.fabricmc.net/net/fabricmc/intermediary/${minecraft_version}/intermediary-${minecraft_version}-v2.jar"
-	src com.google.common.net.UrlEscapers.urlFragmentEscaper().escape(url)
-	dest new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-v2.jar")
-
-	def output = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-v2.tiny")
-	outputs.file output
-
-	doLast {
-		copy {
-			from({ zipTree(downloadIntermediaryV2.dest) }) {
-				from 'mappings/mappings.tiny'
-				rename 'mappings.tiny', "../${output.name}"
-			}
-
-			into output.parentFile
-		}
-	}
+task extractIntermediaryV2(type: ExtractZipEntryTask) {
+	input = downloadIntermediaryV2.output
+	output = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-v2.tiny")
+	entry = "mappings/mappings.tiny"
 }
 
-task invertIntermediary(dependsOn: downloadIntermediary, type: FileOutput) {
+task invertIntermediary(dependsOn: downloadIntermediary, type: FileInputOutput) {
 	group = buildMappingGroup
-	def v1Input = downloadIntermediary.dest
-
+	input = downloadIntermediary.output
 	output = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-inverted.tiny")
-	outputs.file(output)
-
-	outputs.upToDateWhen { false }
 
 	doLast {
 		logger.lifecycle(":building inverted intermediary")
 
 		String[] v1Args = [
-				v1Input.getAbsolutePath(),
-				output.getAbsolutePath(),
+				inputFile.getAbsolutePath(),
+				outputFile.getAbsolutePath(),
 				"intermediary", "official"
 		]
 
@@ -187,21 +157,15 @@ task invertIntermediary(dependsOn: downloadIntermediary, type: FileOutput) {
 	}
 }
 
-task invertIntermediaryv2(dependsOn: downloadIntermediaryV2, type: FileOutput) {
+task invertIntermediaryv2(dependsOn: [downloadIntermediaryV2, extractIntermediaryV2], type: FileInputOutput) {
 	group = buildMappingGroup
-	def v2Input = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-v2.tiny")
-
 	output = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-inverted-v2.tiny")
-	outputs.file(output)
-
-	outputs.upToDateWhen { false }
+	input = extractIntermediaryV2.output
 
 	doLast {
-		logger.lifecycle(":building inverted intermediary v2")
-
 		String[] v2Args = [
-				v2Input.getAbsolutePath(),
-				output.getAbsolutePath(),
+				inputFile.getAbsolutePath(),
+				outputFile.getAbsolutePath(),
 				"intermediary", "official"
 		]
 
@@ -209,33 +173,11 @@ task invertIntermediaryv2(dependsOn: downloadIntermediaryV2, type: FileOutput) {
 	}
 }
 
-task patchIntermediary(dependsOn: [mergeMinecraftJars, downloadIntermediary]) {
-	group = buildMappingGroup
-	def intermediaryTinyInput = downloadIntermediary.outputs.files.singleFile
-
-	def outputFile = new File(cacheFilesMinecraft, "${minecraft_version}-intermediary-full.tiny")
-	outputs.file(outputFile)
-
-	outputs.upToDateWhen { false }
-
-	doLast {
-		logger.lifecycle(":patching intermediary")
-		String[] args = [
-				mergeMinecraftJars.output.getAbsolutePath(),
-				intermediaryTinyInput.getAbsolutePath(),
-				outputFile.getAbsolutePath(),
-				"--writeAll"
-		]
-
-		new CommandRewriteIntermediary().run(args)
-	}
-}
-
 task mapIntermediaryJar(type: MapJarTask, dependsOn: [downloadIntermediary, mergeMinecraftJars]) {
 	group = mapJarGroup
-	output = intermediaryJar
-	input = mergeMinecraftJars.outputFile
-	mappings = downloadIntermediary.dest
+	output = file("${minecraft_version}-intermediary.jar")
+	input = mergeMinecraftJars.output
+	mappings = downloadIntermediary.output
 	classpath.from minecraftLibraries
 	from = 'official'
 	to = 'intermediary'
@@ -243,29 +185,23 @@ task mapIntermediaryJar(type: MapJarTask, dependsOn: [downloadIntermediary, merg
 
 task mapServerIntermediaryJar(type: MapJarTask, dependsOn: [downloadIntermediary, extractBundledServer]) {
 	group = mapJarGroup
-	output = serverIntermediaryJar
-	input = extractBundledServer.outputFile
-	mappings = downloadIntermediary.dest
+	output = file("${minecraft_version}-server-intermediary.jar")
+	input = extractBundledServer.output
+	mappings = downloadIntermediary.output
 	classpath.from minecraftLibraries
 	from = 'official'
 	to = 'intermediary'
 }
 
-task yarnUnpicked(dependsOn: "unpickIntermediaryJar", type: EnigmaTask) {
-	group = yarnGroup
-	jar = unpickedJar
-	mappings = mappingsDir
-}
-
 task yarn(dependsOn: mapIntermediaryJar, type: EnigmaTask) {
 	group = yarnGroup
-	jar = intermediaryJar
+	jar = mapIntermediaryJar.output
 	mappings = mappingsDir
 }
 
-task yarnCommon(dependsOn: mapServerIntermediaryJar, type: EnigmaTask) {
+task yarnCommon(type: EnigmaTask) {
 	group = yarnGroup
-	jar = serverIntermediaryJar
+	jar = mapServerIntermediaryJar.output
 	mappings = mappingsDir
 }
 
@@ -273,10 +209,8 @@ task checkMappings(dependsOn: mapIntermediaryJar) {
 	group = buildMappingGroup
 	inputs.dir mappingsDir
 	doLast {
-		logger.lifecycle(":checking mappings")
-
 		String[] args = [
-				intermediaryJar.getAbsolutePath(),
+				mapIntermediaryJar.outputFile.getAbsolutePath(),
 				mappingsDir.getAbsolutePath()
 		]
 
@@ -288,41 +222,27 @@ task checkMappings(dependsOn: mapIntermediaryJar) {
 	}
 }
 
-task buildYarnTiny(dependsOn: mapIntermediaryJar, type: WithV2FileOutput) {
-	group = buildMappingGroup
-	inputs.dir mappingsDir
-	if (!libs.exists()) {
-		libs.mkdirs()
-	}
+task mapSpecializedMethods(type: MapSpecializedMethodsTask) {
+	intermediaryJarFile = mapIntermediaryJar.output
+	mappings = mappingsDir
+	output = new File(tempDir, "yarn-mappings-v2.tiny")
 
-	v1Output = new File(tempDir, "yarn-mappings.tiny")
-	v2Output = new File(tempDir, "yarn-mappings-v2.tiny")
-
-	outputs.upToDateWhen { false }
-
-	doLast {
-		logger.lifecycle(":generating tiny mappings")
-
-		new MapSpecializedMethodsCommand().run(
-			intermediaryJar.getAbsolutePath(),
-			"enigma",
-			mappingsDir.getAbsolutePath(),
-			"tinyv2:intermediary:named",
-			v2Output.getAbsolutePath()
-		)
-
-		new ConvertMappingsCommand().run(
-			"tinyv2",
-			v2Output.getAbsolutePath(),
-			"tiny:intermediary:named",
-			v1Output.getAbsolutePath())
-	}
+	inputMappingsFormat = "enigma"
+	outputMappingsFormat = "tinyv2:intermediary:named"
 }
 
-task mergeTiny(dependsOn: ["buildYarnTiny", "invertIntermediary"], type: FileOutput) {
+task convertToV1(type: ConvertMappingsTask) {
+	input = mapSpecializedMethods.output
+	output = new File(tempDir, "yarn-mappings.tiny")
+
+	inputMappingsFormat = "tinyv2"
+	outputMappingsFormat = "tiny:intermediary:named"
+}
+
+task mergeTiny(dependsOn: ["convertToV1", "invertIntermediary"], type: FileOutput) {
 	group = buildMappingGroup
-	def yarnTinyInput = buildYarnTiny.v1Output
-	def intermediaryTinyInput = invertIntermediary.output
+	def yarnTinyInput = convertToV1.outputFile
+	def intermediaryTinyInput = invertIntermediary.outputFile
 
 	def unorderedResultMappings = new File(tempDir, "mappings-unordered.tiny")
 	output = new File(tempDir, "mappings.tiny")
@@ -331,7 +251,6 @@ task mergeTiny(dependsOn: ["buildYarnTiny", "invertIntermediary"], type: FileOut
 	outputs.upToDateWhen { false }
 
 	doLast {
-		logger.lifecycle(":merging yarn and intermediary")
 		String[] args = [
 				intermediaryTinyInput.getAbsolutePath(),
 				yarnTinyInput.getAbsolutePath(),
@@ -342,7 +261,6 @@ task mergeTiny(dependsOn: ["buildYarnTiny", "invertIntermediary"], type: FileOut
 
 		new CommandMergeTiny().run(args)
 
-		logger.lifecycle(":reordering merged intermediary")
 		String[] args2 = [
 				unorderedResultMappings.getAbsolutePath(),
 				output.getAbsolutePath(),
@@ -353,12 +271,17 @@ task mergeTiny(dependsOn: ["buildYarnTiny", "invertIntermediary"], type: FileOut
 	}
 }
 
+// Disable the default jar task
+jar {
+	enabled = false
+}
+
 task tinyJar(type: Jar, dependsOn: mergeTiny) {
 	group = buildMappingGroup
-	outputs.upToDateWhen { false }
 	archiveFileName = "yarn-${yarnVersion}.jar"
 	destinationDirectory.set(file("build/libs"))
-	classifier = ""
+	archiveClassifier = ""
+
 	from(mergeTiny.output) {
 		rename { "mappings/mappings.tiny" }
 	}
@@ -367,19 +290,13 @@ task tinyJar(type: Jar, dependsOn: mergeTiny) {
 	}
 }
 
-task compressTiny(dependsOn: [tinyJar, mergeTiny], type: FileOutput) {
+task compressTiny(dependsOn: [tinyJar, mergeTiny], type: FileInputOutput) {
 	group = buildMappingGroup
-	def outputFile = new File(libs, "yarn-tiny-${yarnVersion}.gz")
-	outputs.file(outputFile)
-	output = outputFile
 
-	def inputFile = mergeTiny.output
-
-	outputs.upToDateWhen { false }
+	input = mergeTiny.output
+	output = new File(libs, "yarn-tiny-${yarnVersion}.gz")
 
 	doLast {
-		logger.lifecycle(":compressing tiny mappings")
-
 		def buffer = new byte[1024]
 		def fileOutputStream = new FileOutputStream(outputFile)
 		def outputStream = new GZIPOutputStream(fileOutputStream)
@@ -400,45 +317,17 @@ clean.doFirst {
 	delete tempDir, cacheFilesMinecraft
 }
 
+sourceSets {
+	constants
+	packageDocs // package info files
+}
+
+task constantsJar(type: Jar) {
+	from sourceSets.constants.output
+	archiveClassifier = "constants"
+}
+
 tasks.build.dependsOn "compressTiny","tinyJar","v2UnmergedYarnJar", "v2MergedYarnJar", "javadocJar"
-
-task exportMappingsOfficial(dependsOn: downloadIntermediary) {
-	def composeInput = downloadIntermediary.dest
-
-	doLast {
-		logger.lifecycle(":exporting mappings")
-		String[] args = [
-				"tiny",
-				composeInput.getAbsolutePath(),
-				"enigma",
-				file("mappings/").getAbsolutePath(),
-				"enigma",
-				file("mappings_official/").getAbsolutePath(),
-				"right"
-		]
-
-		new ComposeMappingsCommand().run(args)
-	}
-}
-
-task importMappingsOfficial(dependsOn: invertIntermediary) {
-	def composeInput = invertIntermediary.output
-
-	doLast {
-		logger.lifecycle(":importing mappings")
-		String[] args = [
-				"tiny",
-				composeInput.getAbsolutePath(),
-				"enigma",
-				file("mappings_official/").getAbsolutePath(),
-				"enigma",
-				file("mappings/").getAbsolutePath(),
-				"right"
-		]
-
-		new ComposeMappingsCommand().run(args)
-	}
-}
 
 combineUnpickDefinitions {
 	group = 'unpick'
@@ -447,27 +336,23 @@ combineUnpickDefinitions {
 }
 
 remapUnpickDefinitionsIntermediary {
-	dependsOn buildYarnTiny
 	group = 'unpick'
 	output = new File(tempDir, 'intermediary-definitions.unpick')
-	mappings = buildYarnTiny.v2Output
+	mappings = convertToV1.output
 }
 
-task unpickIntermediaryJar(type: JavaExec, dependsOn: [mapIntermediaryJar, "constantsJar", remapUnpickDefinitionsIntermediary]) {
-	outputs.upToDateWhen { false }
-	group "unpick"
+task unpickIntermediaryJar(type: UnpickJarTask) {
+	input = mapIntermediaryJar.output
+	output = file("${minecraft_version}-intermediary-unpicked.jar")
+	unpickDefinition = remapUnpickDefinitionsIntermediary.output
+	constantsJarFile = constantsJar.archiveFile
+	classpath.from minecraftLibraries
+}
 
-	mainClass = "daomephsta.unpick.cli.Main"
-	systemProperty "java.util.logging.config.file", file('unpick-logging.properties')
-	classpath configurations.unpick
-
-	doFirst {
-		args intermediaryJar.absolutePath, unpickedJar.absolutePath, remapUnpickDefinitionsIntermediary.output.get().asFile.absolutePath, constantsJar.archiveFile.get().asFile.absolutePath
-
-		minecraftLibraries.files.forEach {
-			args it.absolutePath
-		}
-	}
+task yarnUnpicked(dependsOn: "unpickIntermediaryJar", type: EnigmaTask) {
+	group = yarnGroup
+	jar = unpickIntermediaryJar.output
+	mappings = mappingsDir
 }
 
 // Setup the build for the unpicked constants
@@ -480,20 +365,10 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
 }
 
-sourceSets {
-	constants
-	packageDocs // package info files
-}
-
 spotless {
 	java {
 		licenseHeaderFile(rootProject.file("HEADER"))
 	}
-}
-
-task constantsJar(type: Jar) {
-	from sourceSets.constants.output
-	archiveClassifier = "constants"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -505,36 +380,34 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 build.dependsOn constantsJar
 
-task insertAutoGeneratedEnumMappings(dependsOn : [buildYarnTiny,mapIntermediaryJar], type : FileOutput){
+task insertAutoGeneratedEnumMappings(dependsOn : [mapIntermediaryJar], type : FileInputOutput){
 	group = buildMappingGroup
-	File noEnumV2 = buildYarnTiny.v2Output
+	input = mapSpecializedMethods.output
 	output = new File(tempDir, "unmerged-named-v2-with-enum.tiny")
 
-	outputs.upToDateWhen { false }
-
 	doLast {
-		logger.lifecycle(":seeking auto-mappable fields for unmerged mappings")
-
 		MappingNameCompleter.completeNames(
-				intermediaryJar.toPath(),
-				noEnumV2.toPath(),
-				downloadIntermediary.dest.toPath(),
-				output.toPath()
+				mapIntermediaryJar.outputPath,
+				inputPath,
+				downloadIntermediary.outputPath,
+				outputPath
 		)
 	}
 }
 
-task mergeV2(dependsOn: ["v2UnmergedYarnJar", "invertIntermediaryv2"], type: FileOutput) {
+task mergeV2(dependsOn: ["v2UnmergedYarnJar"], type: FileOutput) {
 	def mergedV2 = new File(tempDir, "merged-v2.tiny");
+	outputs.file mergedV2
 
 	output = new File(tempDir, "merged-reordered-v2.tiny")
-	outputs.upToDateWhen { false }
+
+	inputs.file insertAutoGeneratedEnumMappings.output
+	inputs.file invertIntermediaryv2.output
 
 	doLast {
-		logger.lifecycle(":merging yarn and intermediary v2")
 		String[] args = [
-				invertIntermediaryv2.output.getAbsolutePath(),
-				insertAutoGeneratedEnumMappings.output.getAbsolutePath(),
+				invertIntermediaryv2.outputFile.getAbsolutePath(),
+				insertAutoGeneratedEnumMappings.outputPath,
 				mergedV2.getAbsolutePath(),
 				"intermediary",
 				"official"
@@ -557,11 +430,10 @@ task mergeV2(dependsOn: ["v2UnmergedYarnJar", "invertIntermediaryv2"], type: Fil
 task v2UnmergedYarnJar(dependsOn: [insertAutoGeneratedEnumMappings, combineUnpickDefinitions], type: Jar) {
 	def mappings = insertAutoGeneratedEnumMappings.output
 	group = "mapping build"
-	outputs.upToDateWhen { false }
 	archiveFileName = "yarn-${yarnVersion}-v2.jar"
 
 	from(file(mappings)) {
-		rename mappings.name, "mappings/mappings.tiny"
+		rename mappings.get().asFile.name, "mappings/mappings.tiny"
 	}
 	from(combineUnpickDefinitions.output) {
 		rename combineUnpickDefinitions.output.get().asFile.name, "extras/definitions.unpick"
@@ -600,8 +472,8 @@ task v2MergedYarnJar(dependsOn: ["mergeV2"], type: Jar) {
 
 task mapNamedJar(type: MapJarTask, dependsOn: ["mergeV2", "unpickIntermediaryJar"]) {
 	group = mapJarGroup
-	output = namedJar
-	input = unpickedJar
+	output = file("${minecraft_version}-named.jar")
+	input = unpickIntermediaryJar.output
 	mappings = mergeV2.output
 	classpath.from minecraftLibraries
 	from = 'intermediary'
@@ -629,17 +501,13 @@ task genFakeSource(type: JavaExec, dependsOn: ["mergeV2", "mapNamedJar", syncDep
 	mainClass = "net.fabricmc.mappingpoet.Main"
 	classpath configurations.mappingPoet
 	// use merged v2 so we have all namespaces in jd
-	args mergeV2.output.getAbsolutePath(), namedJar.getAbsolutePath(), fakeSourceDir.getAbsolutePath(), mcLibsDir.getAbsolutePath()
-
-	doLast {
-		logger.lifecycle ":Fake source generated"
-	}
+	args mergeV2.output.getAbsolutePath(), mapNamedJar.outputFile.getAbsolutePath(), fakeSourceDir.getAbsolutePath(), mcLibsDir.getAbsolutePath()
 }
 
 task decompileCFR(type: JavaExec, dependsOn: [mapNamedJar]) {
 	mainClass = "org.benf.cfr.reader.Main"
 
-	args namedJar.getAbsolutePath(), "--outputdir", file("namedSrc").absolutePath
+	args mapNamedJar.outputFile.getAbsolutePath(), "--outputdir", file("namedSrc").absolutePath
 
 	doFirst {
 		file("namedSrc").deleteDir()
@@ -651,7 +519,6 @@ task decompileCFR(type: JavaExec, dependsOn: [mapNamedJar]) {
 javadoc {
 	dependsOn genFakeSource
 	group = "javadoc generation"
-	outputs.upToDateWhen { false }
 
 	def mappingPoetJar = project.provider { zipTree configurations.mappingPoetJar.singleFile }
 
@@ -738,8 +605,7 @@ task javadocJar(type: Jar, dependsOn: ["javadoc"]) {
 }
 
 generatePackageInfoMappings {
-	dependsOn mapIntermediaryJar
-	inputJar = intermediaryJar
+	inputJar = mapIntermediaryJar.output
 	packageName = "net/minecraft/unused/packageinfo/"
 	outputDir = file("mappings/net/minecraft/unused/packageinfo")
 }
@@ -804,21 +670,17 @@ task checkVersion {
 
 publish.mustRunAfter checkVersion
 
-class FileOutput extends DefaultTask {
+abstract class FileOutput extends DefaultTask {
 	@OutputFile
 	File output
 }
 
-class WithV2FileOutput extends DefaultTask {
-	@OutputFile
-	File v1Output
-	@OutputFile
-	File v2Output
+abstract class FileInputOutput extends DefaultTask implements WithFileInput, WithFileOutput {
 }
 
 abstract class EnigmaTask extends JavaExec {
 	@Input
-	abstract Property<File> getJar()
+	abstract RegularFileProperty getJar()
 
 	@Input
 	abstract Property<File> getMappings()
