--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 enigma_version=2.1.0
 stitch_version=0.6.1
