--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -30,10 +30,13 @@ dependencies {
 	implementation "org.ow2.asm:asm:${properties.asm_version}"
 	implementation "org.ow2.asm:asm-tree:${properties.asm_version}"
 	implementation "cuchaz:enigma:$properties.enigma_version"
+	implementation "cuchaz:enigma-cli:$properties.enigma_version"
 	implementation "net.fabricmc.unpick:unpick:$properties.unpick_version"
 	implementation "net.fabricmc.unpick:unpick-format-utils:$properties.unpick_version"
+	implementation "net.fabricmc.unpick:unpick-cli:$properties.unpick_version"
 	implementation "net.fabricmc:tiny-mappings-parser:$properties.tiny_mappings_parser_version"
 	implementation "net.fabricmc:tiny-remapper:$properties.tiny_remapper_version"
+	implementation "net.fabricmc:mappingpoet:$properties.mappingpoet_version"
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
 
 	// Contains a number of useful utilities we can re-use.
