Enable configuration cache

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,8 @@ if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
 	throw new UnsupportedOperationException("Yarn's buildscript requires Java 17 or higher.")
 }
 
+enableFeaturePreview "STABLE_CONFIGURATION_CACHE"
+
 rootProject.name = "yarn"
 
 includeBuild 'filament'
