--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "23w07a"
+def minecraft_version = "1.19.4-pre1"
 
 filament {
 	minecraftVersion = minecraft_version
