--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "1.19.4"
+def minecraft_version = "23w12a"
 
 filament {
 	minecraftVersion = minecraft_version
