--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-org.gradle.unsafe.configuration-cache=true
+org.gradle.configuration-cache=true
 
 enigma_version=2.3.0
 stitch_version=0.6.1
