--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
 	// Contains a number of useful utilities we can re-use.
 	implementation ("net.fabricmc:fabric-loom:1.1.10") {
-		transitive = true
+		transitive = false
 	}
 
 	implementation ('net.fabricmc:stitch:0.6.2') {
