--- a/build.gradle
+++ b/build.gradle
@@ -104,8 +104,8 @@ import net.fabricmc.filament.task.ExtractZipEntryTask
 import net.fabricmc.filament.task.UnpickJarTask
 import net.fabricmc.filament.task.base.WithFileInput
 import net.fabricmc.filament.task.base.WithFileOutput
-import net.fabricmc.filament.task.enimga.ConvertMappingsTask
-import net.fabricmc.filament.task.enimga.MapSpecializedMethodsTask
+import net.fabricmc.filament.task.enigma.ConvertMappingsTask
+import net.fabricmc.filament.task.enigma.MapSpecializedMethodsTask
 import net.fabricmc.stitch.commands.CommandMergeTiny
 import net.fabricmc.stitch.commands.CommandReorderTiny
 import net.fabricmc.stitch.commands.tinyv2.CommandMergeTinyV2
