--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "23w13a"
+def minecraft_version = "23w13a_or_b"
 
 filament {
 	minecraftVersion = minecraft_version
