Disable config cache for filament release.

--- a/.github/workflows/release-filament.yml
+++ b/.github/workflows/release-filament.yml
@@ -8,7 +8,7 @@ jobs:
       options: --user root
     steps:
       - uses: actions/checkout@v3
-      - run: ./gradlew :filament:build :filament:publish --stacktrace
+      - run: ./gradlew :filament:build :filament:publish --stacktrace --no-configuration-cache
         env:
           MAVEN_URL: ${{ secrets.MAVEN_URL }}
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
