Update build number prefix, as github no longer allows tags to start with "ref/"

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
         uses: onyxmueller/build-tag-number@v1
         with:
           token: ${{ secrets.github_token }}
-          prefix: ${{ github.ref }}
+          prefix: "build/${{ github.ref }}"
 
       - run: ./gradlew build javadocJar checkVersion publish --stacktrace
         env:
