Another lazy task.

--- a/build.gradle
+++ b/build.gradle
@@ -526,7 +526,8 @@ javadoc {
 	}
 }
 
-task javadocJar(type: Jar, dependsOn: ["javadoc"]) {
+tasks.register('javadocJar', Jar) {
+	dependsOn javadoc
 	group = "javadoc generation"
 
 	from javadoc.destinationDir
