--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "23w18a"
+def minecraft_version = "1.20-pre1"
 
 filament {
 	minecraftVersion = minecraft_version
