More buildscript updates (#3566)

--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -24,6 +24,7 @@ repositories {
 		url 'https://maven.fabricmc.net'
 	}
 	mavenCentral()
+	mavenLocal()
 }
 
 dependencies {
@@ -34,18 +35,14 @@ dependencies {
 	implementation "net.fabricmc.unpick:unpick:$properties.unpick_version"
 	implementation "net.fabricmc.unpick:unpick-format-utils:$properties.unpick_version"
 	implementation "net.fabricmc.unpick:unpick-cli:$properties.unpick_version"
-	implementation "net.fabricmc:tiny-mappings-parser:$properties.tiny_mappings_parser_version"
 	implementation "net.fabricmc:tiny-remapper:$properties.tiny_remapper_version"
 	implementation "net.fabricmc:mappingpoet:$properties.mappingpoet_version"
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+	implementation 'net.fabricmc:mapping-io:0.4.0'
 
 	// Contains a number of useful utilities we can re-use.
-	implementation ("net.fabricmc:fabric-loom:1.1.10") {
+	implementation ("net.fabricmc:fabric-loom:1.2.7") {
 		transitive = false
-	}
-
-	implementation ('net.fabricmc:stitch:0.6.2') {
-		exclude module: 'enigma'
 	}
 
 	testImplementation platform("org.junit:junit-bom:$properties.junit_version")
