--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "1.20.2"
+def minecraft_version = "23w40a"
 
 filament {
 	minecraftVersion = minecraft_version
