--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "23w46a"
+def minecraft_version = "1.20.3-pre1"
 
 filament {
 	minecraftVersion = minecraft_version
