Enable reproducible builds

--- a/build.gradle
+++ b/build.gradle
@@ -275,6 +275,11 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
 }
 
+tasks.withType(AbstractArchiveTask).configureEach {
+	it.preserveFileTimestamps = false
+	it.reproducibleFileOrder = true
+}
+
 spotless {
 	lineEndings = com.diffplug.spotless.LineEnding.UNIX
 
