--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -38,10 +38,10 @@ dependencies {
 	implementation "net.fabricmc:tiny-remapper:$properties.tiny_remapper_version"
 	implementation "net.fabricmc:mappingpoet:$properties.mappingpoet_version"
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
-	implementation 'net.fabricmc:mapping-io:0.4.0'
+	implementation 'net.fabricmc:mapping-io:0.5.1'
 
 	// Contains a number of useful utilities we can re-use.
-	implementation ("net.fabricmc:fabric-loom:1.2.7") {
+	implementation ("net.fabricmc:fabric-loom:1.5.7") {
 		transitive = false
 	}
 
@@ -61,7 +61,14 @@ test {
 
 checkstyle {
 	configFile = file('checkstyle.xml')
-	toolVersion = '10.3.3'
+	toolVersion = '10.13.0'
+}
+
+// Workaround https://github.com/gradle/gradle/issues/27035
+configurations.checkstyle {
+	resolutionStrategy.capabilitiesResolution.withCapability("com.google.collections:google-collections") {
+		select("com.google.guava:guava:0")
+	}
 }
 
 gradlePlugin {
@@ -91,7 +98,7 @@ publishing {
 /**
  * Run this task to download the gradle sources next to the api jar, you may need to manually attach the sources jar
  */
-task downloadGradleSources() {
+tasks.register('downloadGradleSources') {
 	doLast {
 		// Awful hack to find the gradle api location
 		def gradleApiFile = project.configurations.detachedConfiguration(dependencies.gradleApi()).files.stream()
