Let's not do that again

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,27 @@
-.gradle/
-*-merged.jar
-*-mapped.jar
-*-intermediary.jar
-*.DS_Store
-build/
-out/
-mappings_official/
-namedSrc/
+# Ignore everything
+/*
 
-# idea
-.idea/
-*.iml
-*.iws
-*.ipr
-*.jar
+# Folders
+!/.github
+!/filament
+!/gradle
+!/src
+!/unpick-definitions
 
-# eclipse
-.eclipse
-.classpath
-.project
-.settings/
+# Files
 
-# vscode
-.vscode/
-bin/
+!.editorconfig
+!.gitattributes
+!.gitignore
+!build.gradle
+!CONTRIBUTING.md
+!enigma_profile.json
+!gradle.properties
+!gradlew
+!gradlew.bat
+!HEADER
+!LICENSE
+!MAINTAINERS
+!README.md
+!settings.gradle
+!unpick-logging.properties
