Add formatMappings task

--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,7 @@ import net.fabricmc.filament.task.base.WithFileOutput
 import net.fabricmc.filament.task.enigma.MapSpecializedMethodsTask
 import net.fabricmc.filament.task.mappingio.CompleteMappingsTask
 import net.fabricmc.filament.task.mappingio.ConvertMappingsTask
+import net.fabricmc.filament.task.mappingio.FormatMappingsTask
 import net.fabricmc.filament.task.mappingio.MergeMappingsTask
 import net.fabricmc.mappingio.format.MappingFormat
 import net.fabricmc.nameproposal.MappingNameCompleter
@@ -456,6 +457,10 @@ tasks.register('decompileCFR', JavaExec) {
 	doFirst {
 		outputDir.deleteDir()
 	}
+}
+
+tasks.register("formatMappings", FormatMappingsTask) {
+	input = file("mappings")
 }
 
 javadoc {
