--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,10 @@ jobs:
       options: --user root
     steps:
       - uses: actions/checkout@v4
-      - run: ./gradlew build javadocJar checkMappings --stacktrace --warning-mode fail
+      - run: ./gradlew build javadocJar checkMappings formatMappings --stacktrace --warning-mode fail
+      - run: ./gradlew formatMappings --stacktrace --warning-mode fail
+      - name: Check mapping format
+        run: if [ -n "$(git status --porcelain)" ]; then exit 1; fi
       - name: Build artifacts
         if: ${{ matrix.java == '21-jdk' }}
         continue-on-error: true
