--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "24w12a"
+def minecraft_version = "24w14potato"
 
 filament {
 	minecraftVersion = minecraft_version
