--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.configuration-cache=true
 enigma_version=2.4.2
 unpick_version=2.3.0
 cfr_version=0.2.2
+vineflower_version=1.9.3
 name_proposal_version=0.2.0
 asm_version=9.6
 
