--- a/build.gradle
+++ b/build.gradle
@@ -268,6 +268,9 @@ combineUnpickDefinitions {
 java {
 	sourceCompatibility = JavaVersion.VERSION_17
 	targetCompatibility = JavaVersion.VERSION_17
+	toolchain {
+		languageVersion.set(JavaLanguageVersion.of(17))
+	}
 }
 
 tasks.withType(JavaCompile).configureEach {
