--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "24w19b"
+def minecraft_version = "24w20a"
 
 filament {
 	minecraftVersion = minecraft_version
