--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation "net.fabricmc:mappingpoet:$properties.mappingpoet_version"
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
 	implementation 'net.fabricmc:mapping-io:0.5.1'
+	implementation 'net.fabricmc:javapoet:0.1.1'
 
 	// Contains a number of useful utilities we can re-use.
 	implementation ("net.fabricmc:fabric-loom:1.5.7") {
