Use custom visitor instead of an intermediate tree, check for more duplicate names

--- a/build.gradle
+++ b/build.gradle
@@ -556,7 +556,7 @@ javadocLint {
 }
 
 def checkMappings = tasks.register("checkMappings", CheckMappingsTask) {
-	input = mergeV2.output
+	mappings = mappingsDir
 }
 
 check.dependsOn checkPackages
