--- a/build.gradle
+++ b/build.gradle
@@ -556,7 +556,7 @@ javadocLint {
 }
 
 def checkMappings = tasks.register("checkMappings", CheckMappingsTask) {
-	mappings = mappingsDir
+	input = mappingsDir
 }
 
 check.dependsOn checkPackages
