Add checkMappings task (#3875)
* Add task to check for duplicate names

(cherry picked from commit c9756f7dcb7e0d20e42f97ca17bf9c31f0e89e22)

* Fixes

* Use custom visitor instead of an intermediate tree, check for more duplicate names

* Address review

* Reimplement previous check for mappings targeting non-existent elements

* Fix comment

* Fix typo

* Fix import order

---------

Co-authored-by: Shnupbups <shnupbups@gmail.com>
Co-authored-by: NebelNidas <nebelnidas@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,8 @@ import net.fabricmc.filament.task.mappingio.CompleteMappingsTask
 import net.fabricmc.filament.task.mappingio.ConvertMappingsTask
 import net.fabricmc.filament.task.mappingio.FormatMappingsTask
 import net.fabricmc.filament.task.mappingio.MergeMappingsTask
+import net.fabricmc.filament.task.mappingio.CheckMappingsTask
+import net.fabricmc.filament.task.mappingio.CheckMergedMappingsTask
 import net.fabricmc.filament.nameproposal.MappingNameCompleter
 import net.fabricmc.mappingio.format.MappingFormat
 import org.gradle.work.DisableCachingByDefault
@@ -153,7 +155,7 @@ tasks.register('yarnCommon', EnigmaTask) {
 	mappings = mappingsDir
 }
 
-tasks.register('checkMappings') {
+def checkPackages = tasks.register('checkPackages') {
 	group = buildMappingGroup
 	inputs.dir mappingsDir
 	inputs.file mapIntermediaryJar.output
@@ -554,6 +556,17 @@ javadocLint {
 	mappingDirectory = file("mappings")
 }
 
+def checkMappings = tasks.register("checkMappings", CheckMappingsTask) {
+	input = mappingsDir
+}
+
+def checkMergedMappings = tasks.register("checkMergedMappings", CheckMergedMappingsTask) {
+	input = mergeV2.output
+}
+
+check.dependsOn checkPackages
+check.dependsOn checkMappings
+check.dependsOn checkMergedMappings
 check.dependsOn javadocLint
 
 publishing {
