--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "24w40a"
+def minecraft_version = "1.21.2-pre1"
 
 filament {
 	minecraftVersion = minecraft_version
