--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
 	id 'net.fabricmc.filament'
 }
 
-def minecraft_version = "1.21.2-pre5"
+def minecraft_version = "1.21.2-rc1"
 
 filament {
 	minecraftVersion = minecraft_version
